--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@ section {
     font-size: 13px;
     
 }
+    /* FOOTER */
+footer {
+    background-color: #2b111a;
+    text-align: center;
+    padding: 18px;
+    border-top: 4px solid #ff8fab;
 
 </style>
 </head>
